Fixed photo ratio on smaller screens

--- a/JamesMoonPortfolioRedux/wwwroot/css/site.css
+++ b/JamesMoonPortfolioRedux/wwwroot/css/site.css
@@ -663,8 +663,8 @@ html, body {
 }
 
 .aboutsplitcell img {
-    height: 100%;
-    width: auto;
+    height: auto;
+    width: 100%;
 }
 
 .contactsplit {
